# Rust_AttemptG

./: .directory  .gitignore  .gitmodules  b.sh  cargo run trunk serve  cpiguiatt1.code-workspace  targetRm.sh
GUI_ICED/: Cargo.toml
NewsProject/: lastWorkingModel.txt  todo.txt
NewsProject/NewsAPP/: runCommand.txt
NewsProject/NewsAPP/headlines/: Cargo.toml
NewsProject/NewsAPP/headlines/src/: headlines.rs  lib.rs  main.rs
NewsProject/cli/: .gitignore  Cargo.toml
Termie/history/: .bash_history  .lastXcmds
folder_RuSQL/: impCommands
folder_RuSQL/rust-sql/: Cargo.toml
folder_RuSurreal/SurrealTesting/: Cargo.toml
folder_eguiPhase/cpiCli/: Cargo.toml  temp.rs
folder_eguiPhase/cpiCli2/: Cargo.toml
folder_eguiPhase/cpiguiatt1/: Cargo.toml
folder_eguiPhase/egui1/: Cargo.toml
folder_eguiPhase/egui2/: Cargo.toml
folder_eguiPhase/maptesting/: Cargo.toml
folder_eguiToweb/: a.sh
folder_eguiToweb/project1web/: Cargo.toml  index.html
folder_geminiInRust/geminiCrate/: Cargo.toml
folder_geminiInRust/gui-terminal/: Cargo.toml
folder_geminiInRust/rust-gemini-using-python/: Cargo.toml
folder_geminiInRust/simpleTerminalEmulator/: Cargo.toml
folder_httpServer/httpserver/: 404.html
folder_httpServer/rustLanghttpserver/: Cargo.toml
folder_learningPhase/: string_LetsGetRusty.rs
folder_learningPhase/Termie/: Cargo.toml
folder_learningPhase/guiPrac4/: Cargo.toml
guiPractice/: Cargo.toml
hello_world_simple/: Cargo.toml
news project completely working/: runCommand.txt
practiceGUI1/: Cargo.toml
temp/: Cargo.toml
trying_image/: Cargo.toml
(+88 files in other folders)
